[CALCITE-7481] Support jdk24 in CI